[package]
name = "timegate"
version = "0.1.0"
authors = ["Minioin <minioin@protonmail.com>"]
edition = "2018"
description = "Timegate implementation for your web archiving needs.."
license = "MIT OR Apache-2.0"
readme = "Readme.md"
repository = "https://github.com/minioin/timegate/"
keywords = ["archive", "timegate", "web-archive"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.1"
sled = "0.31.0"
